# orderbook_challenge

./: Cargo.toml  README.md  build.rs
proto/: orderbook.proto
src/: binance.rs  bitstamp.rs  error_handling.rs  grpc_client.rs  grpc_server.rs  lib.rs  main.rs  order_collection.rs  orders.rs  websocket.rs
