[package]
name = "orderbook_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.3"
chrono = "0.4.19"
clap = { version = "3.1.12", features = ["derive"] }
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.16"
prost = "0.10.3"
rust_decimal = "1.23"
rust_decimal_macros = "1.23"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.1", features = ["full"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
tokio-stream = "0.1"
tonic = "0.7.2"
tungstenite = "0.17.2"
url = "2.2.2"
crossterm = "0.27.0"

[[bin]]
name = "grpc_orderbook_server"
path = "src/main.rs"

[[bin]]
name = "grpc_orderbook_client"
path = "src/grpc_client.rs"

[build-dependencies]
tonic-build = "0.7.2"